name:                vulkan-examples
version:             0.2.1.0
synopsis:            Examples using the vulkan package
description:         Please see README.md
homepage:            http://github.com/expipiplus1/vulkan-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          haskell@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable vulkan-example
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vulkan >= 1.3.2 && < 1.4
  extra-libraries:     vulkan
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vulkan-examples
