name:                vulkan-examples
version:             0.2.1.0
synopsis:            Examples using the vulkan package
description:         Please see README.md
homepage:            http://github.com/expipiplus1/vulkan-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          haskell@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Graphics
build-type:          Simple
extra-source-files:  triangle/DebugCallback.c
cabal-version:       >=1.10

-- executable vulkan-example
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--   build-depends:       base
--                      , vulkan >= 3.0
--   default-language:    Haskell2010

executable vulkan-example-marshalled
  hs-source-dirs:      marshalled
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , vulkan >= 3.0
                     , say
  default-language:    Haskell2010

executable triangle
  hs-source-dirs:      triangle
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bytestring
                     , extra
                     , managed
                     , pretty-show
                     , say
                     , sdl2
                     , text
                     , transformers
                     , vector
                     , vulkan >= 3.0
  default-language:    Haskell2010
  c-sources:           triangle/DebugCallback.c
  extra-libraries:     SDL2

executable vulkan-example-dynamic
  hs-source-dirs:      dynamic-loader
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , vulkan >= 3.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vulkan-examples
